Fixed function container size on small screen sizes.

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,5 @@
-$breakTablet: 60rem;
+$breakTablet: 600px;
+$breakPhone: 470px;
 
 :root {
 	--color-background: #2c313c;
@@ -90,8 +91,12 @@ body {
 	flex-wrap: wrap;
 	padding: 3rem;
 
+	@media (max-width: $breakPhone) {
+		padding: 3rem 1rem;
+		justify-content: center;
+	}
+
 	&__function {
-		max-width: 95%;
 		width: 40rem;
 		background-color: var(--color-container);
 		padding: 1rem 3rem;
@@ -114,6 +119,10 @@ body {
 		color: var(--color-text-1);
 		font-weight: 600;
 		line-height: 0.9;
+
+		@media (max-width: $breakPhone) {
+			font-size: 2.5rem;
+		}
 	}
 
 	&__image {
@@ -121,5 +130,10 @@ body {
 		height: 14rem;
 		background-size: cover;
 		background-position: center center;
+
+		@media (max-width: $breakPhone) {
+			width: 12rem;
+			height: 12rem;
+		}
 	}
 }
